service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-tutorial-svc
spec:
  selector:
    app: nodejs-tutorial
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
